--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,6 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
 
-[*.{html,mjs,css}]
+[*.{html,ts,css}]
 indent_style = space
 indent_size = 2
