--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ts-loader": "^9.4.4",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
+    "typescript-json-schema": "^0.59.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
@@ -23,7 +24,7 @@
   "scripts": {
     "format": "prettier-standard --format",
     "dist": "webpack --mode=production",
-    "serve": "tsc && node dist/server.js",
+    "serve": "node src/server/genSchema.js && tsc && node dist/server/index.js",
     "web": "webpack --mode=development && http-server",
     "lint": "ts-standard"
   }
