--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "scripts": {
     "format": "prettier-standard --format",
-    "dist": "webpack --mode=production",
+    "dist": "webpack --mode=production && tsc",
     "serve": "node src/server/genSchema.js && tsc && node dist/server/index.js",
+    "serve-dist": "node dist/server/index.js",
     "web": "webpack --mode=development && http-server",
     "lint": "ts-standard"
   }
