--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   "private": false,
   "devDependencies": {
     "@ksmithut/prettier-standard": "^0.1.7",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "fastify-plugin": "^4.5.1",
     "http-server": "^14.1.1",
+    "jest": "^29.6.1",
     "pino-pretty": "^10.0.1",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
     "typescript-json-schema": "^0.59.0",
+    "wabt": "^1.0.32",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
