--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "format": "prettier-standard --format",
     "dist": "webpack --mode=production && tsc",
-    "build": "node src/server/genSchema.json",
+    "build": "node src/server/genSchema.js",
     "serve": "node src/server/genSchema.js && tsc && node dist/server/index.js",
     "serve-dist": "node dist/server/index.js",
     "web": "webpack --mode=development && http-server",
