--- a/package.json
+++ b/package.json
@@ -8,33 +8,31 @@
   "private": false,
   "devDependencies": {
     "@ksmithut/prettier-standard": "^0.1.7",
-    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
     "fastify-plugin": "^4.5.1",
     "http-server": "^14.1.1",
-    "jest": "^29.6.1",
-    "pino-pretty": "^10.0.1",
-    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
     "typescript-json-schema": "^0.59.0",
+    "vitest": "^0.33.0",
     "wabt": "^1.0.32",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "fastify": "^4.19.2"
+    "fastify": "^4.19.2",
+    "pino-pretty": "^10.0.1"
   },
   "scripts": {
     "format": "prettier-standard --format",
+    "build-web": "webpack --mode=development && tsc",
     "dist": "webpack --mode=production && tsc",
-    "build": "node src/server/genSchema.js",
-    "serve": "node src/server/genSchema.js && tsc && node dist/server/index.js",
-    "serve-dist": "node dist/server/index.js",
+    "build": "node src/server/genSchema.js && tsc",
+    "serve": "node dist/server/index.js",
     "web": "webpack --mode=development && http-server",
     "lint": "ts-standard",
-    "test": "jest"
+    "test": "vitest --run"
   },
   "ts-standard": {
     "project": "tsconfig.all.json"
