--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "typescript": "^5.1.6",
     "typescript-json-schema": "^0.59.0",
     "vitest": "^0.33.0",
-    "wabt": "^1.0.32",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "fastify": "^4.19.2"
+    "fastify": "^4.19.2",
+    "wabt": "^1.0.32"
   },
   "scripts": {
     "format": "prettier-standard --format",
