--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@ksmithut/prettier-standard": "^0.1.7",
     "@types/node": "^20.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.45.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
     "fastify-plugin": "^4.5.1",
     "http-server": "^14.1.1",
+    "prettier-eslint": "^15.0.1",
+    "prettier-eslint-cli": "^7.1.0",
     "ts-loader": "^9.4.4",
-    "ts-standard": "^12.0.2",
     "typescript": "^5.1.6",
     "typescript-json-schema": "^0.59.0",
     "vitest": "^0.33.0",
@@ -30,10 +35,7 @@
     "build": "node src/server/genSchema.js && tsc",
     "serve": "node dist/src/server/index.js",
     "web": "http-server",
-    "lint": "ts-standard",
+    "lint": "eslint src test -f unix",
     "test": "vitest --run"
-  },
-  "ts-standard": {
-    "project": "tsconfig.all.json"
   }
 }
