--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.4",
+    "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.45.0",
@@ -15,9 +16,11 @@
     "eslint-config-standard-with-typescript": "^37.0.0",
     "fastify-plugin": "^4.5.1",
     "http-server": "^14.1.1",
+    "path-browserify": "^1.0.1",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "typescript-json-schema": "^0.59.0",
     "vitest": "^0.33.0",
