--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "fastify-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
     "path-browserify": "^1.0.1",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -37,7 +40,7 @@
     "dist": "webpack --mode=production && tsc",
     "build": "node src/server/genSchema.js && tsc",
     "serve": "node dist/src/server/index.js",
-    "web": "http-server -p 8081",
+    "web": "http-server dist -p 8081",
     "lint": "eslint src test -f unix",
     "test": "vitest --run --reporter=verbose"
   }
