--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "eslint": "^8.45.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
+    "fast-glob": "^3.3.1",
     "fastify-plugin": "^4.5.1",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
     "path-browserify": "^1.0.1",
+    "prettier": "^3.0.1",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
     "style-loader": "^3.3.3",
@@ -35,7 +37,7 @@
     "wabt": "^1.0.32"
   },
   "scripts": {
-    "format": "prettier-standard --format",
+    "format": "node format.js",
     "build-web": "webpack --mode=production && tsc",
     "dist": "webpack --mode=production && tsc",
     "build": "node src/server/genSchema.js && tsc",
